--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "babel-register": "^6.18.0",
     "babel-runtime": "^6.0.0",
     "body-parser": "^1.15.2",
     "eslint-plugin-html": "^1.5.3",
@@ -20,7 +21,8 @@
     "vue": "^1.0.21",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
-    "wechat": "^2.0.3"
+    "wechat": "^2.0.3",
+    "wechat-oauth": "^1.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -29,6 +31,7 @@
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
+    "babel-preset-stage-3": "^6.17.0",
     "babel-register": "^6.0.0",
     "chai": "^3.5.0",
     "chromedriver": "^2.21.2",
