--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "babel-register": "^6.18.0",
     "babel-runtime": "^6.0.0",
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "eslint-plugin-html": "^1.5.3",
+    "morgan": "^1.7.0",
     "request": "^2.74.0",
+    "swig": "^1.4.2",
     "vue": "^1.0.21",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
