--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js && node build/pro-server.js",
+    "build": "node build/build.js && node build/server.js",
     "unit": "karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
@@ -25,6 +25,7 @@
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
     "wechat": "^2.0.3",
+    "wechat-api": "^1.32.0",
     "wechat-oauth": "^1.1.1"
   },
   "devDependencies": {
