--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "babel-core": "^6.18.2",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
-    "babel-runtime": "^6.0.0",
+    "babel-runtime": "~6.3.13",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "eslint-plugin-html": "^1.5.3",
@@ -26,15 +30,16 @@
     "vue-router": "^0.7.13",
     "wechat": "^2.0.3",
     "wechat-api": "^1.32.0",
-    "wechat-oauth": "^1.1.1",
-    "weixin-js-sdk": "^1.0.7"
+    "wechat-oauth": "^1.1.1"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
+    "babel-cli": "^6.18.0",
+    "babel-core": "~6.3.15",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.0.0",
+    "babel-loader": "~6.2.0",
     "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-es2015": "~6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "babel-preset-stage-2": "^6.0.0",
     "babel-preset-stage-3": "^6.17.0",
     "babel-register": "^6.0.0",
